fixing a couple more color and alignment issues

--- a/client/src/components/Dashboard/Home.css
+++ b/client/src/components/Dashboard/Home.css
@@ -2,6 +2,7 @@
   text-align: center;
   width: 100%;
   margin: 0 !important;
+  background-color: #DCDCDC;
 }
 
 .head-row {
@@ -16,7 +17,7 @@
 }
 
 .dash-message {
-  background-color: #F5F5F5;
+  background-color: #DCDCDC;
   padding: .5rem .5rem .5rem .5rem;
   margin: 0;
   font-weight: 500 !important;
