--- a/client/src/components/ViewData/ViewData.css
+++ b/client/src/components/ViewData/ViewData.css
@@ -33,3 +33,7 @@ h1 {
 .card.text {
     padding-bottom: .5rem;
 }
+
+.background {
+    background-color: #DCDCDC;
+}
