--- a/client/src/styles/Welcome.css
+++ b/client/src/styles/Welcome.css
@@ -1,6 +1,6 @@
 .content-section {
     margin: 2rem 2rem 2rem 2rem;
-    background-color: #F5F5F5;
+    background-color: #DCDCDC;
 }
 
 .side-bar-col {
